--- a/.gitignore
+++ b/.gitignore
@@ -437,3 +437,8 @@ healthchecksdb
 MigrationBackup/
 
 # End of https://www.gitignore.io/api/vue,vuejs,macos,windows,visualstudio,visualstudiocode
+
+
+
+
+vue-tutorial-master/vue-app
